<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BtBar</string>
    <string name="action_main">Bar</string>    
     <string name="action_cocktail">Order</string>  
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
   
    <!-- Blue tooth  -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>      
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="title_listen">not connected (listen)</string>
     <!-- Bluetooth errors -->
    <string name="bt_connection_lost">Connection lost</string>
    <string name="bt_unable">Unable to connect</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Preferences -->    
    <string name="distributionButton1Category">Liquor 1</string>    
    <string name="distributionButton2Category">Liquor 2</string>   
    <string name="distributionButton3Category">Liquor 3</string>   
    <string name="distributionButton4Category">Liquor 4</string>
    <string name="liquor">liquor</string>
    <string name="timeout">Pour interval</string>
    <string name="hardwareId">Hardware ID</string>        
   
    <!-- Buttons -->
 	<string name="button_connect">Connect</string>
 	<string name="button_serve">Serve cocktail</string>
 	
 	<!-- Cocktails -->
 	<string name="filterCocktails">Filter available cocktails</string>
 	<string name="glassType">Glass</string>
 	<string name="placeholder">&#8230;</string>
</resources>
