<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/cocktailDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cocktailDetailImage"
        android:ems="10"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/placeholder"
        android:textSize="20sp" />

<TextView
        android:id="@+id/cocktailDetailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cocktailDetailTitle"
        android:ems="10"
        android:padding="10dp"
        android:text="@string/placeholder" 
        />

    <TextView
        android:id="@+id/cockTailDetailRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cocktailDetailDescription"
        android:ems="10"
        android:padding="5dp"
        android:text="@string/placeholder" /><Button android:id="@+id/pourButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:text="@string/button_serve" />

        <ImageView
            android:id="@+id/cocktailDetailImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/glassType"
            android:src="@drawable/cocktailglass" />

</RelativeLayout>
