<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/title_paired_devices"
            android:visibility="gone" />

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/title_other_devices"
            android:visibility="gone" />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        

    </LinearLayout>

		<Button
		    android:id="@+id/button_scan"
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginBottom="5dp"
		    android:layout_toLeftOf="@+id/btProgressBar"
		    android:background="#88FFFFFF"
		    android:text="@string/button_scan" />

		<ProgressBar
		    android:id="@+id/btProgressBar"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:layout_alignTop="@+id/button_scan"
		    android:layout_marginRight="16dp" 
		    android:visibility="invisible"/>

</RelativeLayout>